A......... [ZBX-3783] prohibited deleting discovery rules which are used in actions (Sasha)
A......... [ZBX-3783] added audit for action.delete() and correlation.delete() methods (Sasha)
..F....... [ZBXNEXT-4143] implemented submenu autofocus on top-level menu click (nikita)
..F....... [ZBXNEXT-4414] added support for configurable number of displayed tags (agriscenko)

Bug fixes:
........S. [ZBX-13766] fixed comparison of two large float numbers in expressions (Sergejs)
.......PS. [ZBX-13481] fixed incorrect parsing of BITS data type in SNMP response (vso)
.......PS. [ZBX-13744] fixed potential shared memory leak when item is removed (Sergejs)
A.F....... [ZBX-13742] fixed parsing of the operator "not" in trigger expression (Sasha)
.........T [ZBX-13535] fixed trigger recovery expression for 'High error rate' trigger (vitaly)
.........T [ZBX-13278] fixed trigger expression for 'Link down' trigger (vitaly)
...G...... [ZBX-12805] increased command line limit for proc.num checks on hp-ux systems (Andris, wiper)
..F....... [ZBX-13749] fixed creation of dependent items from item wizard (vjaceslavs)
...G...PS. [ZBX-13660] fixed data types passed to is_ushort() for converting PID, port and process number (Andris)
..F....... [ZBX-12935,ZBX-13539] fixed displaying of floating point values under the "Latest data" page (Sasha)
...G...PS. [ZBX-13579] fixed unnecessary data getting when agent becomes available in the non-collection data period (Sergejs)
..F....... [ZBX-13240] removed duplicating HTML IDs from frontend and fixed SID validation in trigger wizard (Ivo)
..F....... [ZBX-13685] fixed maintenance entries displayed in list when filter is applied (agriscenko)
....I..... [ZBX-12756] improved configure script to check iconv library (MVekslers)
........S. [ZBX-13667] added notification in zabbix server log about 'error' in elasticsearch json response (MVekslers)
..F....... [ZBX-13683] fixed multiselect items not being sorted by name (agriscenko)